--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
 Random content here
+<br />
+Referal Links
+<br />
+<div>
+  <a href="https://www.SmarterASP.NET/index?r=reccesoft">
+<img src="https://www.SmarterASP.NET/affiliate/728X90.gif" border="0">
+</a>
+</div>
